--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-cookies.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.js"></script>
 <script src="app/app.js"></script>
 <script src="app/books/BooksController.js"></script>
 <script src="app/books/AddBooksController.js"></script>
@@ -25,5 +26,7 @@
 <script src="app/services/loggerService.js"></script>
 <script src="app/services/constantService.js"></script>
 <script src="app/services/badgeService.js"></script>
+<script src="app/services/bookLoggerInterceptor.js"></script>
+<script src="app/services/BooksResource.js"></script>
 </body>
 </html>
