--- a/public/index.html
+++ b/public/index.html
@@ -28,5 +28,6 @@
 <script src="app/services/badgeService.js"></script>
 <script src="app/services/bookLoggerInterceptor.js"></script>
 <script src="app/services/BooksResource.js"></script>
+<script src="app/services/ccurrentUser.js"></script>
 </body>
 </html>
